feat: updated db connection settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MarketShopDbContextConnection": "Host=localhost;Port=5432;Database=MarketShopDb;Username=devadmin;Password=Kn0wledge1;"
+  }
 }
