Updated file structure to isolate data, refactored code where necessary, implemented seed data.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MarketShopDbContextConnection": "Host=localhost;Port=5432;Database=MarketShopDb;Username=devadmin;Password=Kn0wledge1;"
+    "MarketShopDbContextConnection": "Host=localhost;Port=5432;Database=BirthdayDb;Username=devadmin;Password=Kn0wledge1;"
   }
 }
